fixed a few comments